menu visible is fixed

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,14 @@ button {
 .sidebar-link[aria-expanded="true"] .right-icon {
   transform: rotate(180deg);
 }
+.d-menu{
+  
+  display: block;
+}
 @media (min-width: 992px) {
+  .d-menu{
+    display: none;
+  }
   body {
     overflow: auto !important;
   }
